crates/{{project-name}}-server/tests/snapshots/api__bad_limit.snap
---
source: crates/{{project-name}}-server/tests/api.rs
expression: "&json"
---
{
  "error": {
    "code": "validation_error",
    "message": "invalid input: limit must be between 1 and 100",
    "request_id": "[request_id]"
  }
}
