crates/{{project-name}}-server/tests/snapshots/api__create.snap
---
source: crates/{{project-name}}-server/tests/api.rs
expression: "&created"
---
{
  "created_at_ms": "[timestamp]",
  "id": "[id]",
  "name": "pen"
}
