crates/{{project-name}}-server/tests/snapshots/api__empty_name.snap
---
source: crates/{{project-name}}-server/tests/api.rs
expression: "&json"
---
{
  "error": {
    "code": "validation_error",
    "message": "invalid input: name must not be empty",
    "request_id": "[request_id]"
  }
}
