crates/{{project-name}}-server/tests/snapshots/api__list.snap
---
source: crates/{{project-name}}-server/tests/api.rs
expression: "&page"
---
{
  "items": [
    {
      "created_at_ms": "[timestamp]",
      "id": "[id]",
      "name": "pen"
    }
  ],
  "next_offset": null
}
